<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutActivity"
    android:orientation="vertical"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/bar_color"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/popupTheme"
        >
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/bar_color"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/lib_date"
            android:textAlignment="center"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/about_author"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/about_qq"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/about_tip"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>